--- a/pure-js/index.html
+++ b/pure-js/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="hanoy.css">
 
 	<!-- Поскольку запрет был только на jQuery - то решил попользовать этот замечательный инструмент. -->
-	<script type="application/javascript" src="vendor/underscore-min.js"></script>
+	<script type="application/javascript" src="../bower/underscore/underscore-min.js"></script>
 
 </head>
 
